fix table borders not showin in dark mode

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -73,7 +73,7 @@ $medium-breakpoint: 42em;
 
   // Borders
   --border-color: #606468;
-  --table-border-color: #1b1b1b;
+  --table-border-color: #3a3a3a;
   --hr-border-color: #242424;
 
   // Misilainius
